--- a/templates/buildspec_plan.yml
+++ b/templates/buildspec_plan.yml
@@ -14,10 +14,8 @@ phases:
     commands:
       - "cd ${CODEBUILD_SRC_DIR}/${CODE_SRC_DIR}"
       - "ls -l"
-      - "echo ## TERRAFORM INIT : Initialize the Terraform Workspace"
-      - "terraform init -backend-config='./envs/backend-env.hcl'"
-      - "echo ## VALIDATION : Starting ..."
-      - "terraform validate"
+      - "echo ## TERRAFORM PLAN"
+      - "terraform plan -var-file='./envs/env.tfvars'"
 artifacts:
   files:  
     - '**/*'
